# flask_1_try

./: .gitignore  Makefile  main.py  pyproject.toml
static/: style_edit.css  style_index.css
templates/users/: index.html
