[tool.poetry]
name = "flask-1-try"
version = "0.1.0"
description = ""
authors = ["Daniil Balabanov <spacewalrus@bk.ru>"]
readme = "README.md"
packages = [{include = "flask_1_try"}]

[tool.poetry.dependencies]
python = "3.7.10"
flask = "2.2.5"
gunicorn = "^20.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
